name:                hzyre
version:             0.1.0.0
synopsis:            A Haskell implementation of Zyre.
description:         A Haskell implementation of Zyre.
license:             LGPL-3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    cbits/interface.h,
    cbits/interface.c

source-repository head
    type:     git
    location: https://github.com/mitchellwrosen/hzyre

library
  exposed-modules:      Network.Interface
                        Network.Interface.Internal
  build-depends:        base >=4.7 && <5
                      , bytestring
                      , containers
                      , inline-c
                      , template-haskell
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings
                        QuasiQuotes
                        RecordWildCards
                        ScopedTypeVariables
                        TemplateHaskell

  hs-source-dirs:       src
  c-sources:            src/Network/Interface.c
  include-dirs:         cbits
  ghc-options:          -Wall
  cc-options:           -Wall
